functions updated a bit

--- a/index.html
+++ b/index.html
@@ -23,14 +23,50 @@
     });
 
 
-    function wordFreq() {
-    let string = "What if I wanted to go home tonight but tonight was not the night to be home"
-    var words = string.replace(/[.]/g, '').split(/\s/);
-    var freqMap = {};
-    words.forEach(function(w) {
+    const wordFrequency = () => {
+      /* Below is a regular expression that finds alphanumeric characters
+       Next is a string that could easily be replaced with a reference to a form control
+       Lastly, we have an array that will hold any words matching our pattern */
+    var pattern = /\w+/g,
+        string = "I I am am Am yes yes.",
+        matchedWords = string.match( pattern );
+
+    /* The Array.prototype.reduce method assists us in producing a single value from an
+       array. In this case, we're going to use it to output an object with results. */
+    var counts = matchedWords.reduce(function ( stats, word ) {
+
+        /* `stats` is the object that we'll be building up over time.
+           `word` is each individual entry in the `matchedWords` array */
+        if ( stats.hasOwnProperty( word ) ) {
+            /* `stats` already has an entry for the current `word`.
+               As a result, let's increment the count for that `word`. */
+            stats[ word ] = stats[ word ] + 1;
+        } else {
+            /* `stats` does not yet have an entry for the current `word`.
+               As a result, let's add a new entry, and set count to 1. */
+            stats[ word ] = 1;
+        }
+
+        /* Because we are building up `stats` over numerous iterations,
+           we need to return it for the next pass to modify it. */
+        return stats;
+    }, {} );
+
+    /* Now that `counts` has our object, we can log it. */
+    console.log( counts )
+    }
+
+    // let string = "What if I wanted to go home tonight but tonight was not the night to be home"
+
+    const wordFreq = () => {
+    let string = "What if I wanted to go Home tonight but tonight was not the night to be home"
+    const words = string.replace(/[.]/g, '').split(/\s/);
+    const freqMap = {};
+    words.forEach((w) => {
         if (!freqMap[w]) {
             freqMap[w] = 0;
         }
+        console.log(freqMap[w]+1, w);
         freqMap[w] += 1;
 
       });
@@ -39,6 +75,7 @@
 
     }
 
+// Dope console.log to JSON function
 //     (function () {
 //     var old = console.log;
 //     var logger = document.getElementById('log');
