--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Basic Keyword Frequency Sorter</title>
 </head>
 <body>
   <div>
-    Hello world
+    <div>
+      Basic Keyword Frequency Sorter
+    </div>
+    <br />
     <div class="button">
       <button class="button">Click me</button>
     </div>
@@ -19,9 +22,18 @@
     const words = document.querySelector(".words")
 
     button.addEventListener("click", () => {
-      wordFreq();
+      wordFilter()
     });
 
+    
+
+    const wordFilter = () => {
+      let keyword = "was";
+      let s = "It was a dark and stormy night.";
+      let matchingWords = s.split(/\W+/).filter((word) => word.length > 0);
+      // let matchingWords = s.split(/\W+/).filter((word) => word === keyword);
+      console.log(matchingWords);
+    }
 
     const wordFrequency = () => {
       /* Below is a regular expression that finds alphanumeric characters
@@ -58,37 +70,47 @@
 
     // let string = "What if I wanted to go home tonight but tonight was not the night to be home"
 
-    const wordFreq = () => {
-    let string = "What if I wanted to go Home tonight but tonight was not the night to be home"
-    const words = string.replace(/[.]/g, '').split(/\s/);
-    const freqMap = {};
-    words.forEach((w) => {
-        if (!freqMap[w]) {
-            freqMap[w] = 0;
-        }
-        console.log(freqMap[w]+1, w);
-        freqMap[w] += 1;
+    // const wordFreq = () => {
+    // let string = "What if I wanted to go Home tonight but tonight was not the night to be home"
+    // const words = string.replace(/[.]/g, '').split(/\s/);
+    // const freqMap = {};
+    // words.forEach((w) => {
+    //     if (!freqMap[w]) {
+    //         freqMap[w] = 0;
+    //     }
+    //     console.log(freqMap[w]+1, w);
+    //     freqMap[w] += 1;
 
-      });
-      console.log({freqMap});
-    return freqMap;
+    //   });
+    //   console.log({freqMap});
+    // return freqMap;
 
-    }
+    // }
+
+    
+    // const filteredWords = words.filter((word) => {
+    //   config.keywords.some((keyword) => {
+    //     word.toLowerCase().includes(keyword.toLowerCase());
+    //   })
+    //   console.log(filteredWords)
+    // });
+
+    // console.log(filteredWords)
 
 // Dope console.log to JSON function
-//     (function () {
-//     var old = console.log;
-//     var logger = document.getElementById('log');
-//     console.log = function () {
-//       for (var i = 0; i < arguments.length; i++) {
-//         if (typeof arguments[i] == 'object') {
-//             logger.innerHTML += (JSON && JSON.stringify ? JSON.stringify(arguments[i], undefined, 2) : arguments[i]) + '<br />';
-//         } else {
-//             logger.innerHTML += arguments[i] + '<br />';
-//         }
-//       }
-//     }
-// })();
+    (function () {
+    var old = console.log;
+    var logger = document.getElementById('log');
+    console.log = function () {
+      for (var i = 0; i < arguments.length; i++) {
+        if (typeof arguments[i] == 'object') {
+            logger.innerHTML += (JSON && JSON.stringify ? JSON.stringify(arguments[i], undefined, 2) : arguments[i]) + '<br />';
+        } else {
+            logger.innerHTML += arguments[i] + '<br />';
+        }
+      }
+    }
+})();
 
   </script>
 </body>
